enh: set column size in HSMFS grid

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,4 @@
 0.0.1
+ - enh: set column size in HSMFS grid
  - enh: show file size in the HSMFS grid
  - enh: exclude less than 1MB files from HSMFS grid
