--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.2
+ - enh: model selection with radio buttons
 0.0.1
  - enh: set column size in HSMFS grid
  - enh: show file size in the HSMFS grid
