--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.0.2
+ - ref: model selection with dmc chip component
  - enh: show error link in pipeline comments
  - enh: update stop pipeline button functionality
  - enh: model selection with radio buttons
