--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.0.3
+ - enh: show comment author
  - enh: implement circular callback for unet model options
  - ref: move common.py to pages submodule
  - ref: change hsm cache dir name
