--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+0.0.4
+ - enh: improve user experience for segmentation selection
+ - fix: use model name as key to fetch metadata from dvc data repo
+ - enh: make simple template parser handles legacy thresh value
 0.0.3
  - enh: show comment author
  - enh: implement circular callback for unet model options
