enh: change component id names

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.0.5
+ - enh: update component id naming conventions
 0.0.4
  - enh: improve user experience for segmentation selection
  - fix: use model name as key to fetch metadata from dvc data repo
