--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.1.0
+ - feat: add pipeline status (run/pause) feature (#12)
 0.0.6
  - enh: Add CICD pipeline
  - test: Add gitlab mock apis to test app callbacks
