--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,8 @@
 0.1.0
  - feat: add pipeline status (run/pause) feature (#12)
  - test: ensure pipeline status (run/pause) works as expected
+ - enh: fetch issue meta data with multi threads
+ - enh: add pipeline state icons (run/pause/finish)
 0.0.6
  - enh: Add CICD pipeline
  - test: Add gitlab mock apis to test app callbacks
