--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.1.3
  - enh: add proper icons for pipeline states & set states priority
+ - test: disable run/pause button when there is an error
 0.1.2
  - ref: create generalized drive scanner
  - test: add test for cache_handler.py
