--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.0.2
+ - enh: add proper icons for pipeline states & set states priority
+ - test: disable run/pause button when there is an error
 0.0.1
  - enh: add new regex for auto rapid to fetch result path
  - enh: add hover cards for all arguments
