--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.1.4
+ - enh: improved pagination feature
  - enh: compute total num of opened & closed issue from latest issue iid
 0.1.3
  - enh: add proper icons for pipeline states & set states priority
