--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.1.5
+ - fix: show correct s3 proxy result path
 0.1.4
  - test: modify tests to pass for pagination
  - enh: apply pagination for user filtered pipelines via search
