--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.2.5
+ - enh: disable raw data flag when there is no HSM paths in issue description
 0.2.4
  - enh: implement flexible way of updating dcevent params from request repo (#17)
  - enh: add an alert for dcevent parameter modification (#17)
