--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.2.6
+ - enh: format code and improve readability with black
 0.2.5
  - enh: add thresh segmentor option in advanced request
  - enh: disable raw data flag when there is no HSM paths in issue description
