--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.2.7
+ - ref: eliminate code duplication, rename module, and cleanup code
 0.2.6
  - ref: remove post analysis and modify classification option
  - fix: missing thereshold segmentor arguments in advanced request
