--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.2.9
+ - ref: handle toggle options with single callback for clean parameter caching
 0.2.8
  - fix: copy CHANGELOG to app container
  - feat: add version display to sidebar using latest version from CHANGELOG
