--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,5 @@
 0.2.9
+ - fix: toggle raw data flag gets disabled for all pipleines (#21)
  - ref: handle toggle options with single callback for clean parameter caching
 0.2.8
  - fix: copy CHANGELOG to app container
