enh: add testing models section to U-Net segmentation options

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.2.11
  - fix: remove none as default param in further options
+ - enh: add testing models section to U-Net segmentation options
 0.2.10
  - feat: add fluorescence flag to further options
  - feat: update welcome tab to display changelog
