fix: improve error handling in read_cached_issue_data method

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,6 @@
 0.4.2
  - enh: cache gitlab issues as pickle files to speedup the loading
+ - fix: improve error handling in read_cached_issue_data method 
 0.4.1
  - enh: include testing models section only for advanced request
  - enh: add testing models section to U-Net segmentation options
